Order Confirmation Mail

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/checkout.html
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/templates/checkout.html
@@ -63,6 +63,9 @@
                         <span th:text="${address.phoneNumber}"></span>,
                         <span th:text="${address.alternativePhoneNumber}"></span>
                     </p>
+                    <p class="text-muted">
+                        Delivery in <span th:text="${shipping.days}"></span> days
+                    </p>
                 </div>
             </div>
             <div class="p-3 card mt-2">
